rust/05_sandbox/error/error_propagation_with_own_msg_and_location2/running_into_language_limitations.log
   fixed in:
  nightly-2023-12-24-x86_64-unknown-linux-gnu installed - rustc 1.77.0-nightly (2d7be7393 2023-12-23)

   broken in:
     nightly-2023-12-23-x86_64-unknown-linux-gnu installed - rustc 1.77.0-nightly (d6d7a9386 2023-12-22)


   Compiling error_propagation_with_own_msg_and_location2 v0.1.0 (/home/user/sandbox/rust/05_sandbox/error/error_propagation_with_own_msg_and_location2)
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
 --> src/main.rs:5:12
  |
5 | #![feature(generic_const_exprs)] // warning: the feature `generic_const_exprs` is incomplete and may not be safe ...
  |            ^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
  = note: `#[warn(incomplete_features)]` on by default

error: unconstrained generic constant
   --> src/main.rs:418:66
    |
418 | ...   let mut err_msg_buf=ErrMessage{ buffer:[0u8; err_msg_max_buffer_size(SIZE)], len:0 }; // unconstrained ge...
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
help: try adding a `where` bound
    |
406 |         fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result where [(); err_msg_max_buffer_size(SIZE)]: { //where [(); err_msg_max_buffer_size(SIZE)]: {
    |                                                                            ++++++++++++++++++++++++++++++++++++++++++

error: unconstrained generic constant
   --> src/main.rs:419:46
    |
419 |                     self.append_msg_as_lossy(&mut err_msg_buf);
    |                          ------------------- ^^^^^^^^^^^^^^^^
    |                          |
    |                          required by a bound introduced by this call
    |
note: required by a bound in `NoAllocFixedLenMessageOfPreallocatedSize::<SIZE>::append_msg_as_lossy`
   --> src/main.rs:742:71
    |
742 |         pub const fn append_msg_as_lossy(&self, dest: &mut ErrMessage<{ err_msg_max_buffer_size(SIZE) }>) {
    |                                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `NoAllocFixedLenMessageOfPreallocatedSize::<SIZE>::append_msg_as_lossy`
help: try adding a `where` bound
    |
406 |         fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result where [(); { err_msg_max_buffer_size(SIZE) }]: { //where [(); err_msg_max_buffer_size(SIZE)]: {
    |                                                                            ++++++++++++++++++++++++++++++++++++++++++++++

error: unconstrained generic constant
   --> src/main.rs:420:33
    |
420 |                     let s:&str= &err_msg_buf;
    |                                 ^^^^^^^^^^^^
    |
help: try adding a `where` bound
    |
406 |         fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result where [(); err_msg_max_buffer_size(SIZE)]: { //where [(); err_msg_max_buffer_size(SIZE)]: {
    |                                                                            ++++++++++++++++++++++++++++++++++++++++++

error[E0599]: no method named `get_msg_as_lossy` found for reference `&NoAllocFixedLenMessageOfPreallocatedSize<SIZE>` in the current scope
   --> src/main.rs:430:32
    |
430 |             let err:&str=&self.get_msg_as_lossy();
    |                                ^^^^^^^^^^^^^^^^
    |
help: there is a method `append_msg_as_lossy` with a similar name, but with different arguments
   --> src/main.rs:742:9
    |
742 |         pub const fn append_msg_as_lossy(&self, dest: &mut ErrMessage<{ err_msg_max_buffer_size(SIZE) }>) {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `error_propagation_with_own_msg_and_location2` (bin "error_propagation_with_own_msg_and_location2") generated 1 warning
error: could not compile `error_propagation_with_own_msg_and_location2` (bin "error_propagation_with_own_msg_and_location2") due to 4 previous errors; 1 warning emitted
